# shutdown-tracker

./: .eslintrc.cjs  .flake8  .gitignore  LICENSE  README.md  cloudformation.json  deploy.sh  index.html  package-lock.json  package.json  pyproject.toml  ruff.toml  sort-shutdowns.py  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  labeler.yml
.github/workflows/: deploy.yml  lint.yml
public/: manifest.json
server/: app.py  cloudformation.json
server/.chalice/: config.json
server/chalicelib/: cache.py  s3.py
src/: App.tsx  routeTree.gen.ts  store.ts  styles.ts  types.ts
src/api/: traveltimes.ts  types.ts
src/components/: CalendarSubscribeButton.tsx  DirectionIndicator.tsx  Footer.tsx  LineButtons.tsx  LineGraph.tsx  Navbar.tsx  RangeButtons.tsx  ThemeSwitcher.tsx  Title.tsx  UnitText.tsx  WidgetText.tsx
src/components/Shutdowns/: ChartContainer.tsx  ShutdownCard.tsx  ShutdownContainer.tsx  ShutdownDetails.tsx  ShutdownMap.tsx  ShutdownStopsDialog.tsx  ShutdownTitle.tsx  StatusBadge.tsx  StopTimeline.tsx
src/components/charts/: AggregateLineChart.tsx  ChartBorder.tsx  TravelTimesChart.tsx  types.ts
src/components/maps/: LineMap.module.css  LineMap.tsx
src/components/maps/diagrams/: diagram.ts  lines.ts  path.ts
src/constants/: colors.ts  shutdowns.json  shutdowns.ts  site.ts  stations.json  stations.ts  styles.ts
src/hooks/: useBreakpoint.tsx
src/routes/: __root.tsx  home.tsx  index.lazy.tsx  index.tsx  line.lazy.tsx
src/routes/$line/: index.tsx
src/utils/: chartError.ts  date.ts  stations.ts  theme.ts  time.tsx  travelTimes.ts  watermark.ts
