[tool.poetry]
name = "shutdown-tracker"
version = "1.0.0"
description = "Backend to fetch data around the shutdowns of the MBTA"
authors = ["TransitMatters Labs Team"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
requests = "2.32.3"
boto3 = "^1.35.11"
datadog_lambda = "6.104.0"
icalendar = "^5.0.13"

[tool.poetry.dev-dependencies]
pip = ">=24.0"
chalice = "1.31.3"
flake8 = "^7.1.1"
black = "^24.10.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.9.0"

[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"