[tool.poetry]
name = "shutdown-tracker"
version = "1.0.1"
description = "Backend to fetch data around the shutdowns of the MBTA"
authors = ["TransitMatters Labs Team"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
requests = "2.32.4"
boto3 = "^1.38.33"
datadog_lambda = "6.111.0"
icalendar = "^6.3.1"

[tool.poetry.group.dev.dependencies]
pip = ">=24.1"
chalice = "1.32.0"
flake8 = "^7.3.0"
black = "^25.1.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.9.0"

[tool.black]
line-length = 120
target-version = ['py312']

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"