[project]
name = "shutdown-tracker"
version = "1.0.1"
description = "Backend to fetch data around the shutdowns of the MBTA"
authors = [{ name = "TransitMatters Labs Team" }]
requires-python = ">=3.13,<3.14"
license = "MIT"
dependencies = [
    "requests==2.32.4",
    "boto3~=1.42.21",
    "datadog_lambda==8.120.0",
    "icalendar~=6.3.2",
]

[dependency-groups]
dev = [
    "chalice==1.32.0",
    "ruff>=0.14.8",
    "pre-commit>=4.5.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
